--- a/examine-layers/package.json
+++ b/examine-layers/package.json
@@ -18,11 +18,12 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
-    "qs": "^6.11.2",
-    "tailwindcss-flip": "^1.0.0",
-    "yup": "^1.2.0",
     "@pinia/nuxt": "^0.4.11",
-    "pinia": "^2.1.4"
+    "pinia": "^2.1.4",
+    "qs": "^6.11.2",
+    "reflect-metadata": "^0.1.13",
+    "tailwindcss-flip": "^1.0.0",
+    "yup": "^1.2.0"
   },
   "overrides": {
     "vue": "latest"
