--- a/base-diasy-ui/package.json
+++ b/base-diasy-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-nuxt-layer",
+  "name": "base-diasy-ui",
   "type": "module",
   "version": "0.0.1",
   "main": "./nuxt.config.ts",
