--- a/base-diasy-ui/package.json
+++ b/base-diasy-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base-diasy-ui",
+  "name": "@avapardaz/base-daisy-ui",
   "type": "module",
   "version": "0.0.1",
   "main": "./nuxt.config.ts",
@@ -26,7 +26,7 @@
     "unplugin-auto-import": "^0.16.6",
     "vitest": "^0.33.0"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@vueuse/core": "^10.2.1"
   }
 }
