--- a/diasy-forms/package.json
+++ b/diasy-forms/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "diasy-forms",
+  "name": "@avapardaz/daisy-forms",
   "type": "module",
   "version": "0.0.1",
   "main": "./nuxt.config.ts",
@@ -26,7 +26,7 @@
     "unplugin-auto-import": "^0.16.6",
     "vitest": "^0.33.0"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@vueuse/core": "^10.2.0",
     "@vueuse/integrations": "^10.4.1",
     "fuse.js": "^6.6.2",
