--- a/global-composables/package.json
+++ b/global-composables/package.json
@@ -17,7 +17,7 @@
     "nuxt": "^3.7.3",
     "typescript": "^4.9.3"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@vueuse/core": "^10.2.1",
     "gsap": "^3.12.2"
   }
