--- a/base-diasy-ui/package.json
+++ b/base-diasy-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@avapardaz/base-daisy-ui",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "./nuxt.config.ts",
   "scripts": {
     "dev": "nuxi dev .playground",
@@ -27,6 +27,7 @@
     "vitest": "^0.33.0"
   },
   "peerDependencies": {
-    "@vueuse/core": "^10.2.1"
+    "@vueuse/core": "^10.2.1",
+    "@avapardaz/global-composables": "^0.0.1"
   }
 }
