--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
       "preInstall": "cd global-composables && npm install && cd ../base && npm install && cd ../base-api && npm install && cd ../base-diasy-ui && npm install && cd ../diasy-forms && npm install && cd ../code-generator && npm install",
       "upgradeNuxt": "cd global-composables && npx nuxi upgrade && cd ../base && npx nuxi upgrade && cd ../base-api && npx nuxi upgrade && cd ../base-diasy-ui && npx nuxi upgrade && cd ../diasy-forms && npx nuxi upgrade && cd ../code-generator && npx nuxi upgrade",
       "g":"cd code-generator && yarn plop",
-      "upgrade":"cd global-composables && npx nuxi upgrade && cd ../base && npx nuxi upgrade && cd ../base-api && npx nuxi upgrade && cd ../base-diasy-ui && npx nuxi upgrade && cd ../diasy-forms && npx nuxi upgrade"
+      "upgrade":"cd global-composables && npx nuxi upgrade && cd ../base && npx nuxi upgrade && cd ../base-api && npx nuxi upgrade && cd ../base-diasy-ui && npx nuxi upgrade && cd ../diasy-forms && npx nuxi upgrade",
+      "publish": "cd global-composables && npm publish && cd ../base && npm publish && cd ../base-api && npm publish && cd ../base-diasy-ui && npm publish && cd ../diasy-forms && npm publish"
     }
   }
