--- a/diasy-forms/package.json
+++ b/diasy-forms/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@avapardaz/daisy-forms",
   "type": "module",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "main": "./nuxt.config.ts",
   "scripts": {
     "dev": "nuxi dev .playground",
@@ -27,10 +27,11 @@
     "vitest": "^0.33.0"
   },
   "peerDependencies": {
-    "@avapardaz/global-composables": "^0.1.4",
+    "@avapardaz/global-composables": "^0.1.6",
     "@vueuse/core": "^10.2.0",
     "@vueuse/integrations": "^10.4.1",
     "fuse.js": "^6.6.2",
-    "vee-validate": "^4.10.6"
+    "vee-validate": "^4.12.2",
+    "vue-currency-input": "^3.0.5"
   }
 }
