--- a/global-composables/package.json
+++ b/global-composables/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@avapardaz/global-composables",
   "type": "module",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "main": "./nuxt.config.ts",
   "scripts": {
     "dev": "nuxi dev .playground",
@@ -18,7 +18,8 @@
     "typescript": "^4.9.3"
   },
   "peerDependencies": {
-    "@vueuse/core": "^10.2.1",
+    "@nuxtjs/device": "^3.1.1",
+    "@vueuse/core": "^10.6.1",
     "gsap": "^3.12.2"
   }
 }
