--- a/sentry/package.json
+++ b/sentry/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@avapardaz/global-composables",
+  "name": "@avapardaz/sentry",
   "type": "module",
-  "version": "0.1.16",
+  "version": "0.0.1",
   "main": "./nuxt.config.ts",
   "scripts": {
     "dev": "nuxi dev .playground",
@@ -14,12 +14,10 @@
   "devDependencies": {
     "@nuxt/eslint-config": "^0.1.1",
     "eslint": "^8.28.0",
-    "nuxt": "^3.8.2",
-    "typescript": "^4.9.3"
-  },
-  "peerDependencies": {
-    "@nuxtjs/device": "^3.1.1",
-    "@vueuse/core": "^10.7.0",
-    "gsap": "^3.12.2"
+    "nuxt": "^3.6.2",
+    "typescript": "^4.9.3",
+    "@sentry/node": "^7.72.0",
+    "@sentry/profiling-node": "^1.2.1",
+    "@sentry/vue": "^7.72.0"
   }
 }
