--- a/base/package.json
+++ b/base/package.json
@@ -1,15 +1,14 @@
 {
   "name": "@avapardaz/base",
   "type": "module",
-  "version": "0.1.67",
+  "version": "0.1.73",
   "main": "./nuxt.config.ts",
   "scripts": {
     "dev": "nuxi dev .playground",
-    "build": "nuxt build .playground",
-    "generate": "nuxt generate .playground",
-    "preview": "nuxt preview .playground",
+    "build": "nuxi build .playground",
+    "generate": "nuxi generate .playground",
+    "preview": "nuxi preview .playground",
     "lint": "eslint .",
-    "postinstall": "nuxt prepare .playground",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
@@ -27,7 +26,7 @@
     "vitest": "^0.34.6"
   },
   "peerDependencies": {
-    "@avapardaz/global-composables": "^0.1.67",
+    "@avapardaz/global-composables": "^0.1.73",
     "@vueuse/core": "^10.7.0",
     "gsap": "^3.12.1"
   }
